--- a/src/travel/TubeDashboard.css
+++ b/src/travel/TubeDashboard.css
@@ -7,72 +7,85 @@ div.TubeDashboard table {
 
 }
 
-div.TubeDashboard table tr div.lineName{
+div.TubeDashboard table tr.lineName td{
     font-weight: bold;
     font-size: larger;
 }
 
-div.TubeDashboard table tr .severedelays,
-div.TubeDashboard table tr .minordelays,
-div.TubeDashboard table tr .partsuspended,
-div.TubeDashboard table tr .partclosure{
+div.TubeDashboard table tr td.severedelays,
+div.TubeDashboard table tr td.minordelays,
+div.TubeDashboard table tr td.partsuspended,
+div.TubeDashboard table tr td.partclosure,
+div.TubeDashboard table tr td.suspended,
+div.TubeDashboard table tr td.plannedclosure {
     border-style: dashed;
     border-color: red;
     border-width: 3px;
 }
 
-div.TubeDashboard table tr .bakerloo {
+div.TubeDashboard table tr .reducedservice {
+    border-style: dashed;
+    border-color: orange;
+    border-width: 3px;
+}
+
+
+div.TubeDashboard table tr.bakerloo {
     background: #894e24;
 }
 
-div.TubeDashboard table tr .central {
+div.TubeDashboard table tr.central {
     background: #dc241f;
 }
 
-div.TubeDashboard table tr .elizabeth {
+div.TubeDashboard table tr.elizabeth {
     background: #6950a1;
 }
 
-div.TubeDashboard table tr .hammersmith-city {
+div.TubeDashboard table tr.hammersmith-city {
     background: #d799af;
 }
 
-div.TubeDashboard table tr .circle {
+div.TubeDashboard table tr.circle {
     background: #ffce00;
 }
 
-div.TubeDashboard table tr .district {
+div.TubeDashboard table tr.district {
     background: #007229;
 }
 
-div.TubeDashboard table tr .jubilee {
+div.TubeDashboard table tr.jubilee {
     background: #6a7278;
 }
 
-div.TubeDashboard table tr .metropolitan {
+div.TubeDashboard table tr.metropolitan {
     background: #751056;
     color: white;
 }
 
-div.TubeDashboard table tr .northern {
+div.TubeDashboard table tr.northern {
     background: #000;
     color: white;
 }
 
-div.TubeDashboard table tr .piccadilly {
+div.TubeDashboard table tr.piccadilly {
     background: #0019a8;
     color: white;
 }
-div.TubeDashboard table tr .victoria {
+
+div.TubeDashboard table tr.victoria {
     background: #00a0e2;
 }
-div.TubeDashboard table tr .waterloo-city {
+
+div.TubeDashboard table tr.waterloo-city {
     background: #76d0bd;
 }
-div.TubeDashboard table tr .dlr {
+
+div.TubeDashboard table tr.dlr {
     background: #00afad;
 }
-div.TubeDashboard table tr .london-overground {
+
+div.TubeDashboard table tr.london-overground {
     background: #e86a10;
 }
 
